--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,17 @@ body{
 	margin-top: 10px;
 	text-align: center;
 }
+.links{
+	display: block;
+	text-align: center;
+	margin-top: 15px;
+}
+
+.github{
+	width: 50px;
+	height: 50px;
+}
+.linkedin{
+	width: 50px;
+	height: 50px;
+}
