--- a/src/App.css
+++ b/src/App.css
@@ -29,5 +29,17 @@ body{
 .linkedin{
 	width: 50px;
 	height: 50px;
-	margin-left: 15px;
+	margin-left: 25px;
+}
+.resume{
+	width: 50px;
+	height: 50px;
+	margin-left: 25px;
+}
+.resume_container{
+	text-align: center;
+	
+}
+.resume_pdf{
+	display: none;
 }
